fixed alignment of images (s)

--- a/css/main.css
+++ b/css/main.css
@@ -5590,7 +5590,7 @@ body {
   background-color: #f5f5f5;
   font-size: 14px; }
 
-h2 {
+.teacherH2 {
   margin: 5%; }
 
 .box_1, .box_2, .box_3 {
@@ -5601,18 +5601,18 @@ h2 {
 .teacher {
   margin: 5%; }
 
-img {
-  width: 25%;
+.teacherIMG {
+  width: 20%;
   border-radius: 50%;
-  margin: 3%;
+  margin: 2%;
   float: left; }
 
 .email a {
   color: #006341; }
 
-p {
+.tparagraph {
   font-size: 20px;
   color: #FFFFFF; }
 
-h3 {
+.tNames {
   color: #FFFFFF; }
