--- a/scss/_teachers.scss
+++ b/scss/_teachers.scss
@@ -1,4 +1,4 @@
-h2 {
+.teacherH2 {
 
   margin: 5%;
 
@@ -17,16 +17,15 @@ h2 {
 .teacher {
 
   margin: 5%;
-
 }
 
-img {
+.teacherIMG {
 
-  width: 25%;
+  width: 20%;
 
   border-radius: 50%;
 
-  margin: 3%;
+  margin: 2%;
 
   float: left;
 
@@ -38,15 +37,15 @@ img {
 
 }
 
-p {
+.tparagraph {
 
   font-size: 20px;
-
   color: #FFFFFF;
 
 }
 
-h3 {
+
+.tNames {
 
   color: #FFFFFF;
 
